<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:icon="@drawable/baseline_keyboard_arrow_down_24"
        />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/notificacion"
        android:icon="@drawable/baseline_notification_important_24"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/compra"
        android:icon="@drawable/baseline_shopping_bag_24"
         />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_person_2_24"
        android:onClick="inicio"
        android:title="@string/perfil" />
</menu>