<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Bienvenido_hotel"
        android:textAlignment="center"
        android:textSize="35sp" />


    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="295dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:fontFamily="sans-serif"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/clear"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/IngresoEmail"
                android:layout_width="274dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/ingreseC"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/ingreseE"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="#5F6263" />

            <EditText
                android:id="@+id/contraseña"
                android:layout_width="275dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/ingreseC"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/ingreseC"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#5F6263" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/Loginbutton"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/orange"
        android:onClick="home"
        android:text="@string/ingresar"
        tools:ignore="TextContrastCheck" />


</LinearLayout>