<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="@string/fecha"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="112dp"
        android:layout_height="31dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="1dp"
        android:text="@string/fechaE"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toStartOf="@+id/editTextDate2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/principal"
        android:layout_width="178dp"
        android:layout_height="58dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="29dp"
        android:text="@string/hotel"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="112dp"
        android:layout_height="31dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="1dp"
        android:text="@string/fechaI"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/principal"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="@string/fecha"
        android:ems="10"
        android:hint="@string/fecha"
        android:inputType="date"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/principal" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="64dp"
        android:autofillHints="@string/fecha"
        android:ems="10"
        android:hint="@string/fecha"
        android:inputType="date"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        tools:ignore="TextContrastCheck" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="242dp"
        android:layout_height="194dp"
        android:layout_marginBottom="37dp"
        android:background="@drawable/campanilla"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonReservar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonReservar"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/orange"
        android:onClick="reservar"
        android:text="@string/Reserva"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_marginTop="64dp"
        android:background="@color/clear"
        app:itemTextColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReservar"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>